# csv-file-upload-and-query

./: README.md  pyproject.toml  setup.cfg
city/: models.py  selectors.py  urls.py
city/api/v1/: filters.py  serializers.py  urls.py  views.py
city/migrations/: 0001_initial.py
common/: exceptions.py
common/utils/: api.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py
csv_process/: apps.py  models.py  services.py  tasks.py  urls.py
csv_process/api/v1/: serializers.py  urls.py  views.py
csv_process/migrations/: 0001_initial.py  0002_csvfile_data_type.py
docker/: .env.example  Dockerfile  docker-compose.dev.yaml
